--- a/index.html
+++ b/index.html
@@ -458,6 +458,25 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe-cont">
+          <p class="subscribe-text">Subscribe</p>
+          <form class="footer-form" autocomplete="off">
+            <label class="subscribe-label">
+              <input
+                type="email"
+                class="form-mail"
+                name="email-subscribe"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="subsc-butn" type="submit">
+              Subscribe
+              <svg class="icon-subscribe" width="24" height="24">
+                <use href="./images/icons.svg#icon-Frame-3"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <!-- #endregion Footer -->
