--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
     <div class="backdrop is-open">
       <div class="modal">
         <button class="btn-close" type="button">
-          <svg class="close-icon" width="" height="">
+          <svg class="close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
@@ -499,7 +499,7 @@
                 name="username"
                 id="username"
               />
-              <svg class="icon-form" width="" height="">
+              <svg class="icon-form" width="18" height="24">
                 <use href="./images/icons.svg#icon-person-black"></use>
               </svg>
             </div>
@@ -514,7 +514,7 @@
                 name="user_phone"
                 id="user_phone"
               />
-              <svg class="icon-form" width="" height="">
+              <svg class="icon-form" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
@@ -529,25 +529,39 @@
                 name="user_email"
                 id="user_email"
               />
-              <svg class="icon-form" width="" height="">
+              <svg class="icon-form" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
           </div>
 
           <div class="modal-wrapper">
-            <label for="user_review">Comment</label>
+            <label class="form-label" for="user_review">Comment</label>
             <textarea
+              class="textarea-field"
               name="user_review"
               id="user_review"
               rows="5"
               placeholder="Enter text"
             ></textarea>
-          </div>
-          <label>
+
+          </div class="checkbox-container">
+            <input
+              id="user-privacy"
+              class="checkbox-field visually-hidden"
+              name="user-privacy"
+              type="checkbox"
+              value="true"
+            />
+          <label class="checkbox-label" for="user-privacy">
             <input type="checkbox" name="user_agreement" value="true" />
             I accept the terms and conditions of the
-            <a href="" target="_blank" rel="noopener noreferrer">
+            <a
+              href=""
+              target="_blank"
+              rel="noopener noreferrer"
+              class="policy-link"
+            >
               Privacy Policy
             </a>
           </label>
@@ -556,7 +570,6 @@
         </form>
       </div>
     </div>
-
     <!-- #endregion Modal window  -->
   </body>
 </html>
