--- a/index.html
+++ b/index.html
@@ -462,9 +462,8 @@
           <p class="subscribe-text">Subscribe</p>
           <form class="footer-form" autocomplete="off">
             <label class="subscribe-label">
-              <input
+              <input class="form-mail"
                 type="email"
-                class="form-mail"
                 name="email-subscribe"
                 placeholder="E-mail"
               />
@@ -491,13 +490,13 @@
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form" name="modal form">
           <div class="modal-wrapper">
-            <label class="form-label" for="username">Name</label>
+            <label class="form-label" for="user-name">Name</label>
             <div class="modal-form-wrapper">
               <input
                 class="input-form"
                 type="text"
-                name="username"
-                id="username"
+                name="user-name"
+                id="user-name"
               />
               <svg class="icon-form" width="18" height="24">
                 <use href="./images/icons.svg#icon-person-black"></use>
@@ -521,7 +520,7 @@
           </div>
 
           <div class="modal-wrapper">
-            <label class="form-label" for="user_email">Name</label>
+            <label class="form-label" for="user_email">Email</label>
             <div class="modal-form-wrapper">
               <input
                 class="input-form"
@@ -535,37 +534,42 @@
             </div>
           </div>
 
-          <div class="modal-wrapper">
-            <label class="form-label" for="user_review">Comment</label>
+          <div class="modal-wrapper form">
+            <label class="form-label" for="user-comment">Comment</label>
             <textarea
               class="textarea-field"
-              name="user_review"
-              id="user_review"
+              name="user-comment"
+              id="user-comment"
               rows="5"
-              placeholder="Enter text"
+              placeholder="Text input"
             ></textarea>
-
-          </div class="checkbox-container">
-            <input
+<div class="checkbox-container">
+            </div class="checkbox-privacy">
+              <input
               id="user-privacy"
-              class="checkbox-field visually-hidden"
-              name="user-privacy"
               type="checkbox"
-              value="true"
-            />
-          <label class="checkbox-label" for="user-privacy">
-            <input type="checkbox" name="user_agreement" value="true" />
-            I accept the terms and conditions of the
-            <a
-              href=""
-              target="_blank"
-              rel="noopener noreferrer"
-              class="policy-link"
-            >
-              Privacy Policy
-            </a>
-          </label>
-
+               value="true"
+               name="user-privacy"
+               class="checkbox-container visually-hidden"
+              />
+            <label class="checkbox-label" for="user-privacy">
+              <input type="checkbox" name="user_agreement" value="true" />
+              I accept the terms and conditions of the
+                <span class="checkbox-custom">
+                <svg class="checkbox-icon" width="10" height="8" class="checkbox-icon">
+                  <use href="./images/icons.svg#icon-checkbox"></use>
+                </svg>
+              </span>
+              <a
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                class="policy-link"
+              >
+                Privacy Policy
+              </a>
+            </label>
+</div>
           <button class="btn-sent" type="submit">Sent</button>
         </form>
       </div>
