--- a/index.html
+++ b/index.html
@@ -506,13 +506,13 @@
           </div>
 
           <div class="modal-wrapper">
-            <label class="form-label" for="user_phone">Phone</label>
+            <label class="form-label" for="user-phone">Phone</label>
             <div class="modal-form-wrapper">
               <input
                 class="input-form"
-                type="phone"
-                name="user_phone"
-                id="user_phone"
+                type="tel"
+                name="user-phone"
+                id="user-phone"
               />
               <svg class="icon-form" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
@@ -552,20 +552,9 @@
               value="true"
               name="user-privacy"
             />
-            <label
-              class="checkbox-label"
-              for="user-privacy"
-              type="checkbox"
-              name="user_agreement"
-              value="true"
-            >
+            <label class="checkbox-label" for="user-privacy">
               <span class="checkbox-custom">
-                <svg
-                  class="checkbox-icon"
-                  width="10"
-                  height="8"
-                  class="checkbox-icon"
-                >
+                <svg class="checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-checkbox"></use>
                 </svg>
               </span>
